// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on <GifGrid /> component should show <GifGrid /> correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown animate__delay-1s"
  >
    Hola mundo
  </h3>
  <p
    className="animate__animated animate_flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests on <GifGrid /> component should show items when images are loaded from useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown animate__delay-1s"
  >
    Hola mundo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
